    besides gcc.
  - Update documentation to clarify the interaction between rpath and
    LD_PRELOAD when instrumenting dynamic libraries, issue reported and
    investigated by Davide Del Vento.
  - Ability to disable shared-file reduction by setting the
    DARSHAN_DISABLE_SHARED_REDUCTION environment variable.
  - More thorough output from darshan-parser --perf, suggested by Huong Luu.
  - Increased uncompressed log header size from 1 KiB to 4 KiB to support
    additional metadata annotations and more mounted file system information.
  - CP_F_{FASTEST/SLOWEST}_RANK_TIME counters now take MPI-IO time into
    account, not just POSIX time, issue reported by Huong Luu.

darshan-2.2.8
=============
* WARNING: please note that the Darshan module file for Cray environments has
  been updated, especially in the DARSHAN_POST_LINK_OPTS variable.  Please
  update your module file accordingly when upgrading from 2.2.7 or earlier 
  on Cray platforms.
* Improved ability to analyze I/O activity related to particular files 
  opened by an application
  - darshan-summary-per-file.sh script to generate a separate pdf summary for
    each file opened by an application. Developed by Rob Latham.
  - Added --file-list and --file-list-detailed options to darshan-parser to 
    list files opened by an application along with brief statistics
  - Added --file option to darshan-convert to filter out activity for a
    specific file from a Darshan log
* Add wrappers for POSIX AIO operations (fixes tracking of underlying POSIX
  operations resulting from nonblocking MPI-IO operations.  Bug reported by
  David Shrader.)
* Fix compile-time errors when Darshan is configured for use with MPICH 3.x 
  installations with const correct MPI function prototypes. Also affects 
  MPICH 1.5+ installations with optional const support.  Reported by Yushu Yao.
* Fix segmentation fault when using LD_PRELOAD instrumentation on programs